--- a/index.html
+++ b/index.html
@@ -681,12 +681,13 @@
     <script>
         // Konfigurasi Firebase (Ganti dengan konfigurasi Anda dari Firebase Console)
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+          apiKey: "AIzaSyCNuLH9W-LqSkyLgZyqGzzXi_q50pb7bXQ",
+          authDomain: "fullstate-network.firebaseapp.com",
+          projectId: "fullstate-network",
+          storageBucket: "fullstate-network.firebasestorage.app",
+          messagingSenderId: "538971846872",
+          appId: "1:538971846872:web:4c7f49386e5325f8eebfad",
+          measurementId: "G-4SG58WYT4G"
         };
 
         // Inisialisasi Firebase
