--- a/index.html
+++ b/index.html
@@ -691,12 +691,12 @@
     <script>
         // Konfigurasi Firebase (Ganti dengan konfigurasi Anda dari Firebase Console)
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "fullstate-network-71664607.firebaseapp.com",
-            projectId: "fullstate-network-71664607",
-            storageBucket: "fullstate-network-71664607.appspot.com",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+          apiKey: "AIzaSyCNuLH9W-LqSkyLgZyqGzzXi_q50pb7bXQ",
+          authDomain: "fullstate-network.firebaseapp.com",
+          projectId: "fullstate-network",
+          storageBucket: "fullstate-network.firebasestorage.app",
+          messagingSenderId: "538971846872",
+          appId: "1:538971846872:web:4c7f49386e5325f8eebfad",
         };
 
         // Inisialisasi Firebase
