--- a/index.html
+++ b/index.html
@@ -697,6 +697,7 @@
           storageBucket: "fullstate-network.firebasestorage.app",
           messagingSenderId: "538971846872",
           appId: "1:538971846872:web:4c7f49386e5325f8eebfad",
+          measurementId: "G-4SG58WYT4G"
         };
 
         // Inisialisasi Firebase
